# ParmEd

./: .checkignore  .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  MANIFEST.in  README  README.md  appveyor.yml  ccd.js  compat24.py  get_hybridization_from_rdkit.py  index.html  parmed.Doxyfile  parmed.py  process_html.sh  requirements.txt  setup.cfg  setup.py  timer.py  xparmed.py
GmxTests/: About.txt  atest.py  molecule.py  nifty.py  test.py
ParmEd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ParmedTools/: ParmedActions.py  __init__.py  add1264.py  addljtype.py  argumentlist.py  arraytools.py  changeljpair.py  changeradii.py  checkvalidity.py  coarsegrain.py  exceptions.py  logos.py  mod_molecules.py  parmed_cmd.py  parmlist.py
chemistry/: __init__.py  constants.py  exceptions.py  geometry.py  molecule.py  parameters.py  periodic_table.py  residue.py  structure.py  system.py  timer.py  topologyobjects.py  utils.py  vec3.py
cpinutils/: __init__.py  exceptions.py  residues.py  utilities.py
devtools/: environment-dev.yaml
doc/: Makefile  amber.rst  charmm.rst  conf.py  devdoc.rst  dimensional_analysis.rst  gromacs.rst  index.rst  omm_amber.rst  omm_charmm.rst  omm_gromacs.rst  omm_rosetta.rst  openmm.rst  parmed.rst  parmed_api.rst  readwrite.rst  rosetta.rst  structure.rst  topologyobjects.rst  units_constants.rst  visualization.rst
doctest/: output.txt
doctrees/: amber.doctree  charmm.doctree  devdoc.doctree  dimensional_analysis.doctree  environment.pickle  index.doctree  (+14 more)
(+2131 files in other folders)
